# motion_force_control

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: forceTaskSharedControl_params.cfg  modulatedDS_params.cfg  motionController_params.cfg  moveToDesiredPose_params.cfg  objectGrabbing_params.cfg  unifiedMotionForceController_params.cfg
config/: optitrack.yaml
include/: ForceTaskSharedControl.h  ModulatedDS.h  MotionController.h  MoveToDesiredPose.h  ObjectGrabbing.h  PassiveDsForceController.h  SurfaceLearning.h  UnifiedMotionForceController.h
launch/: optitrack.launch  optitrack_object_grabbing.launch
src/: ForceTaskSharedControl.cpp  ModulatedDS.cpp  MotionController.cpp  MoveToDesiredPose.cpp  ObjectGrabbing.cpp  PassiveDsForceController.cpp  SurfaceLearning.cpp  TwoRobotsTransform.cpp  UnifiedMotionForceController.cpp  forceTaskSharedControl_node.cpp  modulatedDS_node.cpp  motionController_node.cpp  moveToDesiredPose_node.cpp  objectGrabbing_node.cpp  surfaceLearning_node.cpp  twoRobotsTransform_node.cpp  unifiedMotionForceController_node.cpp
